--- a/index.html
+++ b/index.html
@@ -48,64 +48,71 @@
     </div>
 </section>
 <section class="second">
+    
     <div class="Aboutss fade-in">
+        <div class="about01">
         <h3>About</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, modi? Cum assumenda tenetur voluptate illo! Vero est accusamus quas atque dolor laboriosam voluptate porro facere sequi eos magnam, quod aspernatur!
             atque dolor laboriosam voluptate porro facere sequi eos magnam, quod aspernatur!
         </p>
+    </div>
         <div class="profile"></div>
     </div>
+
+   
     
     <h5 class="tag">Lates Project</h5>
     <div class="wrap">
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>E-Commerce</h4>
-            <button class="more">Contact us</button>
+            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">Contact us</a>
         </div>
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>Ingridients</h4>
-            <button class="more">Contact us</button>
+            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">Contact us</a>
         </div>
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>Restaurant</h4>
-            <button class="more">Contact us</button>
+            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">Contact us</a>
         </div>
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>Company</h4>
-            <button class="more">Contact us</button>
+            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">Contact us</a>
         </div>
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>E-Commerce</h4>
-            <button class="more">Contact us</button>
+            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">Contact us</a>
         </div>
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>E-Commerce</h4>
-            <button class="more">Contact us</button>
+            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">Contact us</a>
         </div>
     </div>
         <div class="proqua fade-in1">
-        <div class="process">
-            <h6>Process</h6>
-            <p>1. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto
-            </p>
-            <p>2. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto</p>
-            <p>3. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto</p>
-            <p>4. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto</p>
-            <p>5. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto</p>
-        </div>
-        <div class="process">
-            <h6>Qualification</h6>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto</p>
-        </div>
+            <div class="inner">
+                <div class="process">
+                    <h6>Process</h6>
+                    <p>1. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto
+                    </p>
+                    <p>2. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto</p>
+                    <p>3. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto</p>
+                    <p>4. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto</p>
+                    <p>5. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto</p>
+                </div>
+                <div class="process">
+                    <h6>Qualification</h6>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum iusto</p>
+                </div>
+            </div>
     </div>
     <div class="contact fade-in2">
         <h8>Contact Us</h8>
@@ -114,19 +121,20 @@
         <div>
         <button class="btn2">SEND MESSAGE</button>
     </div>
-    </div>
     <div class="footer">
         <h9 class="epal">/n<span>D</span>ev</h9>
         <div class="fa">
         <i class="fa fa-facebook fa-lg"></i>
         <i class="fa fa-github fa-lg"></i>
         <i class="fa fa-twitter fa-lg"></i>
-    </div>
+        </div>
  
     <div class="copy">
         <h10>© copyright 2020, ./nDev - All Rights Reserve</h10>
     </div>
     </div>
+    </div>
+   
 </section>
    
     <script src="java.js"></script>
