--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <link rel="stylesheet" href="C:\Users\Naim Panotolan\Desktop\css\css\font-awesome.min.css">
     <script src="jquery-3.5.1.min.js"></script>
     <script>   $(document).ready(function(){
-            /*$("#hide").click(function(){
-                $(".box").hide();
-            });
-            $("#show").click(function(){
-                $(".box").show();
-            });
-        });*/
-      
-            $(window).scroll(function(){
-                $('.container').css("opacity", 1 - 
-                    $(window).scrollTop()/150)
-            })
+        /*$("#hide").click(function(){
+            $(".box").hide();
+        });
+        $("#show").click(function(){
+            $(".box").show();
+        });
+    });*/
+  
+        $(window).scroll(function(){
+            $('.ups').css("opacity", 1 - 
+                $(window).scrollTop()/150)
         })
+    })
+</script>
+
     </script>
 </head>
 <body>
@@ -32,9 +34,10 @@
         <div class="logo"><h2>/n<span style="color: yellow;">D</span>ev</h2></div>
     <div class="container">
         <div class="ups">
+            <div class="ups1">
             <div class="content">
-                <h1>Welcome,</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid laudantium exercitationem velit, repellendus illum, libero aut quasi quis dolores quas molestiae</p>
+                <h1>Hello World,</h1>
+                <p>My name is Naim, I'm front end developer with an Engineering background. I also enjoyed making cool stuff.</p>
             </div>
             <div class="fas">
                 <ul class="ul">
@@ -46,15 +49,17 @@
         </div>
     </div>
     </div>
+    </div>
 </section>
 <section class="second">
     
     <div class="Aboutss fade-in">
         <div class="about01">
         <h3>About</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, modi? Cum assumenda tenetur voluptate illo! Vero est accusamus quas atque dolor laboriosam voluptate porro facere sequi eos magnam, quod aspernatur!
-            atque dolor laboriosam voluptate porro facere sequi eos magnam, quod aspernatur!
+        <p>I am a Computer Engineer with over two years of experience in web design and development with skills
+            in HTML5, CSS3, SASS/SCSS Jacascript, AJAX, jQuery, . I used tools such as FIGMA and photoshop(editing images), GIT(CMS) for updates codes in GITHUB. I'm currently immproving my React, Wordpress theme and SEO principle for improvement.  
         </p>
+        <p> I am self motivated to combine the arts of design with the art of programming and always up to learn new things. cheer up!</p>
     </div>
         <div class="profile"></div>
     </div>
