--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="ups1">
             <div class="content">
                 <h1>Hello World,</h1>
-                <p>My name is Naim, I'm front end developer with an Engineering background. I enjoyed making cool stuff and love seeing my client enjoyed it too.</p>
+                <p>My name is Naim, <!--I'm front end developer with an Engineering background.--> I enjoyed making cool stuff and love seeing my client enjoyed it too.</p>
             </div>
             <div class="fas">
                 <ul class="ul">
@@ -61,7 +61,7 @@
 
    
     
-    <h5 class="tag">Lates Project</h5>
+    <h5 class="tag">Lates Projects</h5>
     <div class="wrap">
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
@@ -120,7 +120,7 @@
             </div>
        
         </div>
-        <div>
+
         <div class="contact fade-in2">
             <h8>Contact Us</h8>
             <input type="text" class="up" placeholder="Email">
@@ -139,7 +139,7 @@
         <div class="copy">
             <h10>© copyright 2020, ./nDev - All Rights Reserve</h10>
         </div>
-    </div>
+  
 </section>
     <script src="java.js"></script>
 </body>
