--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
 </section>
 <section class="second">
-    <div class="moreMore">Scroll more</div>
+    <div class="moreMore">Scroll moree</div>
     <div class="Aboutss fade-in">
         <div class="about01">
             <h3>About</h3>
