--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myPortfolio</title>
+    <script src="https://kit.fontawesome.com/7cb397b897.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="C:\Users\Naim Panotolan\Desktop\css\css\font-awesome.min.css">
-    <script src="https://kit.fontawesome.com/7cb397b897.js" crossorigin="anonymous"></script>
+    
     <script src="jquery-3.5.1.min.js"></script>
     <script> 
         /*$("#hide").click(function(){
@@ -67,33 +68,33 @@
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>E-Commerce</h4>
-            <a href="https://namidev05.github.io/e-commerce/" class="more">Contact us</a>
+            <a href="https://namidev05.github.io/e-commerce/" class="more">LIVE VIEW</a>
         </div>
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>Thesis Portfolio</h4>
-            <a href="https://namidev05.github.io/ThesisPortfolio//" class="more">Contact us</a>
+            <a href="https://namidev05.github.io/ThesisPortfolio//" class="more">LIVE VIEW</a>
         </div>
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>Company</h4>
-            <a href="https://namidev05.github.io/company.github.io/" class="more">Contact us</a>
+            <a href="https://namidev05.github.io/company.github.io/" class="more">LIVE VIEW</a>
         </div>
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>Restaurant</h4>
-            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">Contact us</a>
+            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">LIVE VIEW</a>
         </div>
       
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elits.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>E-Commerce</h4>
-            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">Contact us</a>
+            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">LIVE VIEW</a>
         </div>
         <div class="wrapper fade">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
             <h4>E-Commerce</h4>
-            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">Contact us</a>
+            <a href="https://namidev05.github.io/myPortfolio.github.io/" class="more">LIVE VIEW</a>
         </div>
     </div>
         <div class="proqua fade-in1">
