--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="fas">
                         <ul class="ul">
-                            <li><i class="fa fa-1.5x fa-facebook"></i></li>
+                            <li><a href="https://web.facebook.com/naim.panotolaniii/"i class="fa fa-1.5x fa-facebook"></a></li>
                             <li class="git" ><a href="https://github.com/namidev05"i class="fa fa-1.5x fa-github"></a></li> 
                             <li><i class="fa fa-1.5x fa-twitter"></i></li>
                             <a href="https://drive.google.com/file/d/19T9bJbhFjq7uw_QQi8BMcgCvYfUugEuz/view?usp=drivedk" button class="btn" >download cv</a></a>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
         <div class="profiles01">
-            <img src="images/naps03.png" alt="">
+            <img src="images/naps03.png">
         </div>
     </div>
     
