--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="standard-wrapper">
                     <div class="standard-passion-head">
                         <h6 class="standards">WITH PASSION</h6>
-                        <p class="standard-paragpraph">I just love coding and developing website. It gives me the feeling of hapinness and self-fulfillment</p>
+                        <p class="standard-paragpraph">I just love coding and developing website. It givess me the feeling of hapinness and self-fulfillment</p>
                     </div>
                     <hr>
                    <div class="standard-high-head">
@@ -82,12 +82,12 @@
        
         <div class="wrap">
             <div class="wrapper fade">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elits.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
                 <h4>Thesis Portfolio</h4>
                 <a href="https://namidev05.github.io/ThesisPortfolio//" class="more">LIVE VIEW</a>
             </div>
             <div class="wrapper fade">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicings elit. ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
                 <h4>E-Commerce</h4>
                 <a href="https://namidev05.github.io/e-commerce/" class="more">LIVE VIEW</a>
             </div>
@@ -97,7 +97,7 @@
                 <a href="https://namidev05.github.io/comingSoon/" class="more">LIVE VIEW</a>
             </div>
             <div class="wrapper fade">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elits.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
                 <h4>Company</h4>
                 <a href="https://namidev05.github.io/company.github.io/" class="more">LIVE VIEW</a>
             </div>
