--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
        
         <div class="wrap">
             <div class="wrapper fade">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elits.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elits. psum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
                 <h4>Thesis Portfolio</h4>
                 <a href="https://namidev05.github.io/ThesisPortfolio//" class="more">LIVE VIEW</a>
             </div>
