--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <a href="https://namidev05.github.io/e-commerce/" class="more">LIVE VIEW</a>
             </div>
             <div class="wrapper fade">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elits.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
                 <h4>Properties</h4>
                 <a href="https://namidev05.github.io/comingSoon/" class="more">LIVE VIEW</a>
             </div>
