--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <a href="https://namidev05.github.io/ThesisPortfolio//" class="more">LIVE VIEW</a>
             </div>
             <div class="wrapper fade">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicings elit. ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicings elits. ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
                 <h4>E-Commerce</h4>
                 <a href="https://namidev05.github.io/e-commerce/" class="more">LIVE VIEW</a>
             </div>
