--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <a href="https://namidev05.github.io/comingSoon/" class="more">LIVE VIEW</a>
             </div>
             <div class="wrapper fade">
-                <p>Lorem ipsum, dolor sit amet onsectetur adipisicing elits.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
+                <p>Lorem ipsum, dolor sit amet onsectetur adipissssssicing elitss.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
                 <h4>Company</h4>
                 <a href="https://namidev05.github.io/company.github.io/" class="more">LIVE VIEW</a>
             </div>
