--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <a href="https://namidev05.github.io/comingSoon/" class="more">LIVE VIEW</a>
             </div>
             <div class="wrapper fade">
-                <p>Lorem ipsum, dolor sit amet onsectetur adipissssssicing elitss.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
+                <p>Lorem ipsum, dolor sit amet onsectetur adipissssssicing elitsss.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
                 <h4>Company</h4>
                 <a href="https://namidev05.github.io/company.github.io/" class="more">LIVE VIEW</a>
             </div>
@@ -168,7 +168,7 @@
                 <i class="fa fa-twitter fa-lg"></i>
             </div>
             <div class="copy">
-                <h10>© copyright 2020, ./nDev - All Rights Reserve</h10>
+                <h10>© copyright 2020, ./nDev - All Rights Reserve...</h10>
             </div>
     </section>
     <script src="java.js"></script>
