--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>myPortfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
-    <!-- <script src="https://kit.fontawesome.com/7cb397b897.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/7cb397b897.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="C:\Users\Naim Panotolan\Desktop\css\css\font-awesome.min.css">
     
