--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <li><a href="https://web.facebook.com/naim.panotolaniii/"i class="fa fa-1.5x fa-facebook"></a></li>
                             <li class="git" ><a href="https://github.com/namidev05"i class="fa fa-1.5x fa-github"></a></li> 
                             <li><i class="fa fa-1.5x fa-twitter"></i></li>
-                            <a href="https://drive.google.com/file/d/19T9bJbhFjq7uw_QQi8BMcgCvYfUugEuz/view?usp=drivedk" button class="btn" >download cv</a></a>
+                            <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1ClA0LBT7ErKG0XsQu3GXEn5j4pdcgaHp%2Fview%3Fusp%3Ddrivesdk%26fbclid%3DIwAR2f5pBIIIABmSei2xszzGhccNVBMCGP4JJ6wgj3l4BQBs4EzKRSSTEPPao&h=AT0UgLtlI_V2vlrvjHo0zM5eXD41erah0IJheeOTov2GapKoxABsxZw_8ScXhXCztZAj4VhILkz1oRAmqWK1CTlbk-9uNw2PDnoKmj-2SHHfHg4UCoceFAtk7wgPFgAPef0aEA" button class="btn" >download cv</a></a>
                         </ul>
                     </div>
                 </div>
@@ -84,15 +84,15 @@
                 <h4>Thesis Portfolio</h4>
                 <a href="https://namidev05.github.io/ThesisPortfolio//" class="more">LIVE VIEW</a>
             </div>
-            <div class="wrapper fade">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicings elits. ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
-                <h4>E-Commerce</h4>
-                <a href="https://namidev05.github.io/e-commerce/" class="more">LIVE VIEW</a>
-            </div>
-            <div class="wrapper fade">
+           <div class="wrapper fade">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elits.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
                 <h4>Properties</h4>
                 <a href="https://namidev05.github.io/comingSoon/" class="more">LIVE VIEW</a>
+            </div>
+            <div class="wrapper fade">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicings elits. ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
+                <h4>E-Commerce</h4>
+                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1CgXE-haS4wuWcnO1ZwPmv8uexlYhJEjt%2Fview%3Fusp%3Ddrivesdk%26fbclid%3DIwAR1YCNgT7o2fMs888NFyhpBwv6fFBh163GMjAXxQb49EBuXBilGGhojS4iI&h=AT0UgLtlI_V2vlrvjHo0zM5eXD41erah0IJheeOTov2GapKoxABsxZw_8ScXhXCztZAj4VhILkz1oRAmqWK1CTlbk-9uNw2PDnoKmj-2SHHfHg4UCoceFAtk7wgPFgAPef0aEA" class="more">LIVE VIEW</a>
             </div>
             <div class="wrapper fade">
                 <p>Lorem ipsum, dolor sit amet onsectetur adipissssssicing elitsss.  ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. </p>
