--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <li><a href="https://web.facebook.com/naim.panotolaniii/"i class="fa fa-1.5x fa-facebook"></a></li>
                             <li class="git" ><a href="https://github.com/namidev05"i class="fa fa-1.5x fa-github"></a></li> 
                             <li><i class="fa fa-1.5x fa-twitter"></i></li>
-                            <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F1ClA0LBT7ErKG0XsQu3GXEn5j4pdcgaHp%2Fview%3Fusp%3Ddrivesdk%26fbclid%3DIwAR2f5pBIIIABmSei2xszzGhccNVBMCGP4JJ6wgj3l4BQBs4EzKRSSTEPPao&h=AT0UgLtlI_V2vlrvjHo0zM5eXD41erah0IJheeOTov2GapKoxABsxZw_8ScXhXCztZAj4VhILkz1oRAmqWK1CTlbk-9uNw2PDnoKmj-2SHHfHg4UCoceFAtk7wgPFgAPef0aEA" button class="btn" >download cv</a></a>
+                            <a href="https://drive.google.com/file/d/1ClA0LBT7ErKG0XsQu3GXEn5j4pdcgaHp/view?fbclid=IwAR3ewbU7WwE3uF-aNz8Tik0AS705CY-sYLEGinztcI3ZjfT3Oc0kX9jXF4Q" button class="btn" >download cv</a></a>
                         </ul>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                 <i class="fa fa-twitter fa-lg"></i>
             </div>
             <div class="copy">
-                <h10>© copyright 2020, ./nDev - All Rights Reserve...</h10>
+                <h10>© copyright 2020, ./nDev - All Rights Reserve....</h10>
             </div>
     </section>
     <script src="java.js"></script>
